fix collapse menu

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -115,10 +115,10 @@ article, footer, .about {
 
 body {
   overflow-x: hidden;
+
   nav {
     width: 100%;
     min-height: 100px;
-    max-height: 100px;
     background-color: white !important;
     .container-fluid {
       form {
